--- a/store/index.html
+++ b/store/index.html
@@ -66,8 +66,8 @@ body, html {
 
 <!-- Store -->
 
-  <div class="w3-row-padding w3-padding-5" style="padding:128px 16px" id="store">
-    <h3 class="w3-center">STORE</h3>
+  <div class="w3-row-padding w3-padding-5"  id="store">
+    <h3 class="w3-center" style="margin-top:64px">STORE</h3>
 
        <!-- item 2 Start -->
     <!--Item 2 Slideshow Start-->
