--- a/m/store/index.html
+++ b/m/store/index.html
@@ -23,7 +23,7 @@ body, html {
   line-height: 1.8;
 }
 .w3-bar .w3-button {
-  padding: 1px;
+  padding: 16px;
 }
 </style>
 
@@ -37,12 +37,13 @@ body, html {
     //-->
     </script>
 
+
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
+<div class="w3-top w3-row-padding w3-padding-5">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
     <a href="http://imodspro.com/" class="w3-bar-item w3-button w3-wide"><img src="https://iModsPro.com/photos/iModsPro-nav.png"></a>
     <!-- Right-sided navbar links -->
-    <div class="w3-right w3-hide-small">
+    <div class="w3-right w3-hide-small" >
       <a href="http://imodspro.com/" class="w3-bar-item w3-button"><i class="fa fa-home"></i>HOME</a>
       <a href="https://imodspro.com/#about" class="w3-bar-item w3-button">ABOUT</a>
       <a href="http://imodspro.com/store" class="w3-bar-item w3-button"><img src="https://cdn.discordapp.com/attachments/353766529277362188/591318506742480942/Webp.net-resizeimage.png"> STORE</a>
@@ -68,7 +69,7 @@ body, html {
 
 <!-- Store -->
 
-  <div class="\ w3-padding-5" style="" id="store">
+  <div class="w3-row-padding w3-padding-5" id="store">
     <h3 class="w3-center" style="margin-top:48px">STORE</h3>
 
        <!-- item 2 Start -->
