--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ body, html {
     <div class="w3-col m6">
       <h3 class ="w3-center">Want a Customized Look?</h3>
       <p class ="w3-center">Look no further! It's not a skin, it's your phone!</p>
-      <p><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black w3-center"><i class="fa fa-th"> </i> View Our Works</a></p>
+      <p class="w3-center"><a href="https://www.instagram.com/imodspro/" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
     </div>
     <div class="w3-col m6">
       <img class="w3-image w3-round-large w3-center" src="https://cdn.discordapp.com/attachments/353766529277362188/591114244955570186/image0.jpg" alt="Custom_Phone" width="500" height="700">
