--- a/index.html
+++ b/index.html
@@ -145,8 +145,9 @@ body, html {
   <h3 class="w3-center">CONTACT</h3>
   <p class="w3-center w3-large">Let's get in touch. Feel free to request and ask about repairs and aftermarket modifications.</p>
   <div style="margin-top:48px">
-    <p class="w3-center"><i class="fa fa-map-marker fa-fw w3-xxlarge"></i>Queens, New York</p>
+    <p class="w3-center"><i class="fa fa-map-marker fa-fw w3-xxlarge"></i>Forest Hills, New York</p>
     <p class="w3-center"><i class="fa fa-envelope fa-fw w3-xxlarge"> </i> goodfixez@gmail.com</p>
+    <p class="w3-center"><i class="fa fa-phone fa-fw w3-xxlarge"> </i> (914) 417-9169</p>
     <br>
     <p class="w3-center">
           <a href="mailto:goodfixez@gmail.com" class="w3-black w3-button w3-text-white"><i class="fa fa-paper-plane w3-text-white"></i> SEND MESSAGE</a> <a href="https://imodspro.com/mail-ins" class="w3-black w3-button w3-text-white"><i class="fa fa-envelope w3-text-white "></i>MAIL IN YOUR DEVICE</a>
