--- a/index.html
+++ b/index.html
@@ -39,11 +39,9 @@ body, html {
 <body>
 
   <script type="text/javascript">
-    <!--
-    if (screen.width = 699) {
+    if (screen.width < 699) {
     document.location = "https://imodspro.com/m/";
     }
-    //-->
     </script>
 
 <!-- Navbar (sit on top) -->
