--- a/m/index.html
+++ b/m/index.html
@@ -38,6 +38,14 @@ body, html {
 
 <body>
 
+  <script type="text/javascript">
+    <!--
+    if (screen.width >= 699) {
+    document.location = "https://imodspro.com";
+    }
+    //-->
+    </script>
+
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
