--- a/store/index.html
+++ b/store/index.html
@@ -64,7 +64,7 @@ body, html {
 
 <!-- Store Start -->
 
-<div class="w3-row-padding w3-padding-5" id="store">
+<div class="w3-light-grey w3-row-padding w3-padding-5" id="store">
   <h3 class="w3-center" style="margin-top:48px">STORE</h3>
 
      <!-- item 1 Start -->
